Implemented a single plain word option and added information to the help screen

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -100,6 +100,11 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_singlePlainWord"
+        android:title="@string/action_singlePlainWord"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/submenu_exampleTemplates"
         android:enabled="true"
         android:title="@string/action_exampleTemplates"
