--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#49914B</color>
+    <color name="colorPrimaryDark">#206622</color>
+    <color name="colorAccent">#6CAE6C</color>
     <color name="colorGray">#424242</color>
     <color name="colorLightGray">#EFEFEF</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBrandGreen">#33A537</color>
 </resources>
