--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#49914B</color>
     <color name="colorPrimaryDark">#206622</color>
-    <color name="colorAccent">#6CAE6C</color>
+    <color name="colorAccent">#58abc9</color>
     <color name="colorGray">#424242</color>
     <color name="colorLightGray">#EFEFEF</color>
     <color name="colorWhite">#FFFFFF</color>
